<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.sietebits.mapasandroid.MenuPrincipal">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </android.support.design.widget.AppBarLayout>

    <GridLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="3">
        <android.support.v7.widget.CardView
            android:id="@+id/cvTehotihuacan"
            android:layout_height="@dimen/heightCard"
            android:layout_width="@dimen/heightCard"
            android:layout_column="0"
            android:layout_row="0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_latino"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/widthImage"
                    android:layout_height="@dimen/widthImage"
                    android:src="@drawable/img_tehotihuacan"
                    android:layout_gravity="center"/>
                <TextView
                    android:text="@string/tituloTeotihuacan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cvLatino"
            android:layout_height="@dimen/heightCard"
            android:layout_width="@dimen/heightCard"
            android:layout_column="1"
            android:layout_row="0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/widthImage"
                    android:layout_height="@dimen/widthImage"
                    android:src="@drawable/img_latino"
                    android:layout_gravity="center"/>
                <TextView
                    android:text="@string/tituloLatinoamericana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cvCastillo"
            android:layout_height="@dimen/heightCard"
            android:layout_width="@dimen/heightCard"
            android:layout_column="0"
            android:layout_row="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/widthImage"
                    android:layout_height="@dimen/widthImage"
                    android:src="@drawable/img_castillo"
                    android:layout_gravity="center"/>
                <TextView
                    android:text="@string/tituloCastillo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cvRevolucion"
            android:layout_height="@dimen/heightCard"
            android:layout_width="@dimen/heightCard"
            android:layout_column="1"
            android:layout_row="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/widthImage"
                    android:layout_height="@dimen/widthImage"
                    android:src="@drawable/img_revolucion"
                    android:layout_gravity="center"/>
                <TextView
                    android:text="@string/tituloRevolucion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion"/>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_columnSpan="2"
            android:layout_row="2"
            >
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_tierra">
                <RadioButton
                    android:id="@+id/radio_mapa"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opcMapa"/>
                <RadioButton
                    android:id="@+id/radio_hibrido"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opcHibrido"/>
                <RadioButton
                    android:id="@+id/radio_tierra"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opcTierra"/>
                <RadioButton
                    android:id="@+id/radio_croquis"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opcCroquis"/>
            </RadioGroup>

        </LinearLayout>
    </GridLayout>
</android.support.design.widget.CoordinatorLayout>
